# diffsinger-voicevox-connector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  INSTALL.md  MODEL_SETUP.md  TROUBLESHOOTING.md
models/: README.txt
resources/: dependency_licenses.json  engine_manifest.json  terms.md  update_infos.json
scripts/: README.md  build_exe.py  build_vvpp.py  smoke_test_local.py  start.bat  start.command
src/diffsinger_engine/: __init__.py  __main__.py  app.py  logging_config.py  model_loader.py  runtime_state.py  schemas.py  settings.py
src/diffsinger_engine/inference/: diffsinger_runner.py  frame_query.py  g2p.py  pitch_predictor.py  postprocess.py  score_converter.py  vocoder.py
src/diffsinger_engine/routers/: compat.py  meta.py  sing.py  singers.py  tts_stub.py
tests/: conftest.py  test_api_compat.py  test_api_meta.py  test_api_sing.py  test_api_stub.py  test_build_vvpp.py  test_entrypoint.py  test_g2p.py  test_model_loader.py  test_pitch_predictor.py  test_score_converter.py  test_vocoder.py
